# MarsIT-Rust

./: MarsIT.postman_collection.json  README.md
1-startproject/: Cargo.toml
1-startproject/src/: main.rs
2-route_parameters/: Cargo.toml
2-route_parameters/src/: main.rs
3-post_routes/: Cargo.toml
3-post_routes/src/: main.rs
4-custom_api_responder/: Cargo.toml
4-custom_api_responder/src/: main.rs
5-jwt/: Cargo.toml
5-jwt/src/: main.rs
6-cors/src/: main.rs
MarsIT-full/: Cargo.toml
MarsIT-full/src/: main.rs
